# vector-search

./: .gitignore  README.md  main.py  pyproject.toml
model/: models.py
src/data_generator/: synthetic_data_generator.py
src/db/: mongo.py
src/routes/: generate.py  search.py
src/services/: data_generation.py  get_synthetic_data.py  vector_search.py
